Add package control settings to version control

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *
 
 !.gitignore
+!Default (OSX).sublime-keymap
 !Preferences.sublime-settings
+!Package Control.sublime-settings
 !Theme - Kronuz.sublime-theme
