--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 Package Control.last-run
 Package Control.merged-ca-bundle
 Package Control.user-ca-bundle
-Package Contro.cache
+Package Control.cache
